feat:合并 commitID 86f07720fdae2e4d47d1f83945b0950822bc777d 并且处理冲突

--- a/manifests/charts/istio-operator/templates/deployment.yaml
+++ b/manifests/charts/istio-operator/templates/deployment.yaml
@@ -18,8 +18,8 @@ spec:
         - name: istio-operator
           image: {{.Values.hub}}/operator:{{.Values.tag}}
           command:
-          - operator
-          - server
+            - operator
+            - server
           imagePullPolicy: IfNotPresent
           resources:
             limits:
@@ -39,4 +39,6 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: {{.Values.operatorNamespace | quote}}
+            - name: WAIT_FOR_RESOURCES_TIMEOUT
+              value: {{.Values.waitForResourcesTimeout | quote}}
 ---
