--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istio-operator/templates/deployment.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istio-operator/templates/deployment.yaml
@@ -39,4 +39,6 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: {{.Values.operatorNamespace | quote}}
+            - name: WAIT_FOR_RESOURCES_TIMEOUT
+              value: {{.Values.waitForResourcesTimeout | quote}}
 ---
